P1/force-app/main/default/objects/Mail__c/fields/DeliveryStatus__c.field-meta.xml
<CustomField>
    <fullName>DeliveryStatus__c</fullName>
    <label>DeliveryStatus</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IN TRANSIT</fullName>
            </value>
            <value>
                <fullName>DELIVERED</fullName>
            </value>
            <value>
                <fullName>MISSING</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>