P1/force-app/main/default/objects/Mail__c/listViews/X2ndQueue_Mail.listView-meta.xml
<ListView>
    <fullName>X2ndQueue_Mail</fullName>
    <filterScope>Queue</filterScope>
    <label>PostalServiceQueue</label>
    <queue>PostalServiceQueue</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>